--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -4,5 +4,6 @@
 <body>
 <h1>About me</h1>
 <p>This is a portfolio site about anything that can be put in a portfolio.</p>
+<p> Hello World. </p>
 </body>
 </html>
